using cglib to do proxy